# api-test-template

./: .gitignore  Makefile  README.md  conftest.py  dev-requirements.txt  project_structure  pyproject.toml  pytest.ini  requirements.txt  setup.py
clients/: http_client.py
config/: settings.py
config/environments/: test.yaml
config/environments/cn/: test.yaml
config/environments/us/: prod.yaml
core/: base_test.py  logger.py
tests/api/: test_example.py  test_httpbin_example.py  test_user_db.py
utils/: db_handler.py  env_manager.py
